--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.39.3",
     "autoprefixer": "^10.4.17",
     "date-fns": "^3.3.1",
+    "lucide-react": "^0.477.0",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
