--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@radix-ui/react-slider": "^1.2.3",
     "@supabase/supabase-js": "^2.39.3",
     "autoprefixer": "^10.4.17",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.477.0",
     "postcss": "^8.4.33",
@@ -20,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^3.4.1",
     "uuid": "^11.1.0"
   },
