--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@supabase/supabase-js": "^2.39.3",
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.1",
